Phase 7: Docker & Final Polish

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   bot:
     build: .
     env_file: .env
+    environment:
+      DATABASE_URL: postgresql+asyncpg://user:pass@db:5432/smartdrive
+      REDIS_URL: redis://redis:6379/0
     depends_on:
       db:
         condition: service_healthy
